--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							Graphic Design Architect<br />
 							crafted by <a href="http://html5up.net">us</a>.</p>
 							<ul class="actions">
-								<li><a href='javascript:fg_popup_form("fg_formContainer","fg_backgroundpopup");'>Contact us</a></li>
+								<li><a href="#" class="button special">Get in Touch</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
