--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 							Graphic Design Architect<br />
 							crafted by <a href="http://html5up.net">us</a>.</p>
 							<ul class="actions">
-								<li><a href="mailto:myketapang@gmail.com?subject=MyKetapang Website Enquiry&body=Hi,I found this website
-and thought I have something interesting to ask you guys" class="button special">Get in Touch</a></li>
+								<li><a href="mailto:myketapang@gmail.com?subject=MyKetapang Website Enquiry" class="button special">Get in Touch</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
