--- a/team.html
+++ b/team.html
@@ -29,8 +29,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Services</a></li>
-											<li><a href="elements.html">Team</a></li>
+											<li><a href="services.html">Services</a></li>
+											<li><a href="team.html">Team</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
 										</ul>
