--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 											<li><a href="services.html">Services</a></li>
 											<li><a href="team.html">Team</a></li>
 											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="contact-us.html">Contact us</a></li>
 										</ul>
 									</div>
 								</li>
