--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Our|Team</h2>
+							<h2>Our.Team</h2>
 							<p>dependence on one another and of strength to be derived by unity</p>
 						</header>
 						<section class="wrapper style5">
