--- a/team.html
+++ b/team.html
@@ -61,7 +61,7 @@
 <![endif]-->
 
 <noscript>&lt;img src="images/team-joshloewen.jpg" width="264" height="264" alt="Josh Loewen" &gt;</noscript>
-<img alt="Josh Loewen" src="images/team-joshloewen.jpg"></div>
+<img alt="Josh Loewen" src="http://www.statusbureau.com/images/team-joshloewen.jpg"></div>
 
 <div class="social-holder">
 <ul class="social">
