--- a/team.html
+++ b/team.html
@@ -60,7 +60,7 @@
 <div data-src="images/team-joshloewen.jpg"></div>
 <![endif]-->
 
-<noscript>&lt;img src="images/team-joshloewen.jpg" width="264" height="264" alt="Josh Loewen" &gt;</noscript>
+<noscript>&lt;img src="http://www.statusbureau.com/images/team-joshloewen.jpg" width="264" height="264" alt="Josh Loewen" &gt;</noscript>
 <img alt="Josh Loewen" src="http://www.statusbureau.com/images/team-joshloewen.jpg"></div>
 
 <div class="social-holder">
