--- a/team.html
+++ b/team.html
@@ -49,58 +49,26 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<article class="box alignleft">
-<div class="img-block">
-<div class="img-box" data-picture="" data-alt="Josh Loewen">
-<div data-src="images/team-joshloewen.jpg"></div>
-<div data-src="images/team-joshloewen-small.jpg" data-media="(max-width:950px)"></div>
-<div data-src="images/team-joshloewen.jpg" data-width="132" data-height="132" data-media="(max-width:950px) and (-webkit-min-device-pixel-ratio:1.5), (max-width:950px) and (min-resolution:144dpi)"></div>
-
-<!--[if (lt IE 9) & (!IEMobile)]>
-<div data-src="images/team-joshloewen.jpg"></div>
-<![endif]-->
-
-<noscript>&lt;img src="http://www.statusbureau.com/images/team-joshloewen.jpg" width="264" height="264" alt="Josh Loewen" &gt;</noscript>
-<img alt="Josh Loewen" src="http://www.statusbureau.com/images/team-joshloewen.jpg"></div>
-
-<div class="social-holder">
-<ul class="social">
-<li><a href="http://www.linkedin.com/in/statusbureau" class="linkedin">linkedin</a></li>
-<li><a href="https://plus.google.com/u/0/116732203017119992859/posts" class="google">google</a></li>
-<li><a href="http://www.twitter.com/thestatusbureau" class="twitter">twitter</a></li>
-<!--<li><a href="https://www.facebook.com/j0shl0ewen" class="facebook">facebook</a></li>-->
-<!--<li><a href="#" class="instagram">intagram</a></li>-->
-</ul>
+								<div class="container text-center">
+  <h3>THE BAND</h3>
+  <p><em>We love music!</em></p>
+  <p>We have created a fictional band website. Lorem ipsum..</p>
+  <br>
+  <div class="row">
+    <div class="col-sm-4">
+      <p><strong>Name</strong></p><br>
+      <img src="bandmember.jpg" alt="Random Name" width="255" height="255">
+    </div>
+    <div class="col-sm-4">
+      <p><strong>Name</strong></p><br>
+      <img src="bandmember.jpg" alt="Random Name" width="255" height="255">
+    </div>
+    <div class="col-sm-4">
+      <p><strong>Name</strong></p><br>
+      <img src="bandmember.jpg" alt="Random Name" width="255" height="255">
+    </div>
+  </div>
 </div>
-</div>
-
-<div class="text-box">
-
-<h1>Josh Loewen</h1>
-<p><em>Co-founder + Strategy</em><br>
-
-  <br>
-  
-  <a href="mailto:josh@statusbureau.com" class="email">josh@statusbureau.com</a>
-  
-  <br>
-</p>
-<p>Josh has worked in web and advertising for 15 years, is an active member of the IABC, BCAMA, BC AIM and is Google Adwords and Analytics certified. He's run countless campaigns and manages most of the day to day.<br>
-<br>
-<em>Location: Vancouver Office</em><br>
-
-  <br>
-  
-  <!--
-<em>Bookmarked:</em><br>
-→ <a href="http://www.kaushik.net/avinash/">Occam's Razor by Avinash</a><br>
-→ <a href="http://www.sethgodin.com/sg/books.asp">Any Seth Godin Book</a><br>
-→ <a href="https://itunes.apple.com/ca/podcast/dan-carlins-hardcore-history/id173001861">Hardcore History podcast</a><br>
-</p>
--->
-  
-</p></div>
-</article>
 
 				<!-- Footer -->
 					<footer id="footer">
