--- a/team.html
+++ b/team.html
@@ -49,26 +49,37 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<div class="container text-center">
-  <h3>THE BAND</h3>
-  <p><em>We love music!</em></p>
-  <p>We have created a fictional band website. Lorem ipsum..</p>
-  <br>
-  <div class="row">
+								<section>
+									<!-- Container (Portfolio Section) -->
+<div class="container-fluid text-center bg-grey">
+  <h2>Portfolio</h2><br>
+  <h4>What we have created</h4>
+  <div class="row text-center">
     <div class="col-sm-4">
-      <p><strong>Name</strong></p><br>
-      <img src="bandmember.jpg" alt="Random Name" width="255" height="255">
+      <div class="thumbnail">
+        <img src="paris.jpg" alt="Paris" width="400" height="300">
+        <p><strong>Paris</strong></p>
+        <p>Yes, we built Paris</p>
+      </div>
     </div>
     <div class="col-sm-4">
-      <p><strong>Name</strong></p><br>
-      <img src="bandmember.jpg" alt="Random Name" width="255" height="255">
+      <div class="thumbnail">
+        <img src="newyork.jpg" alt="New York" width="400" height="300">
+        <p><strong>New York</strong></p>
+        <p>We built New York</p>
+      </div>
     </div>
     <div class="col-sm-4">
-      <p><strong>Name</strong></p><br>
-      <img src="bandmember.jpg" alt="Random Name" width="255" height="255">
+      <div class="thumbnail">
+        <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
+        <p><strong>San Francisco</strong></p>
+        <p>Yes, San Fran is ours</p>
+      </div>
     </div>
   </div>
-</div>
+</div>		
+								</section>
+					</article>
 
 				<!-- Footer -->
 					<footer id="footer">
