--- a/team.html
+++ b/team.html
@@ -57,29 +57,29 @@
   <div class="row text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="paris.jpg" alt="Paris" width="400" height="300">
-        <p><strong>Paris</strong></p>
+        <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwj55Znt5KLQAhXFo48KHb3kBk8QjRwIBw&url=https%3A%2F%2Ftwitter.com%2Fanoncircle&psig=AFQjCNHYx0EJ-dHRPXLfPDgv7U9M9wjC5g&ust=1479025329694106" alt="Paris" width="400" height="300">
+        <p><strong>Founder + Strategy</strong></p>
         <p>Yes, we built Paris</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="newyork.jpg" alt="New York" width="400" height="300">
-        <p><strong>New York</strong></p>
+        <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwj55Znt5KLQAhXFo48KHb3kBk8QjRwIBw&url=https%3A%2F%2Ftwitter.com%2Fanoncircle&psig=AFQjCNHYx0EJ-dHRPXLfPDgv7U9M9wjC5g&ust=1479025329694106" alt="New York" width="400" height="300">
+        <p><strong>CFO</strong></p>
         <p>We built New York</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-        <p><strong>San Francisco</strong></p>
+        <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwj55Znt5KLQAhXFo48KHb3kBk8QjRwIBw&url=https%3A%2F%2Ftwitter.com%2Fanoncircle&psig=AFQjCNHYx0EJ-dHRPXLfPDgv7U9M9wjC5g&ust=1479025329694106" alt="San Francisco" width="400" height="300">
+        <p><strong>Marketing Analysis</strong></p>
         <p>Yes, San Fran is ours</p>
       </div>
     </div>
   </div>
 </div>		
 								</section>
-					</article>
+					
 
 				<!-- Footer -->
 					<footer id="footer">
