--- a/team.html
+++ b/team.html
@@ -57,30 +57,30 @@
   <div class="row text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="https://pbs.twimg.com/profile_images/1685631688/AnonCircle4_400x400.png" alt="Paris" width="400" height="300">
-        <p><strong>Founder + Strategy</strong></p>
+        <img src="paris.jpg" alt="Paris" width="400" height="300">
+        <p><strong>Paris</strong></p>
         <p>Yes, we built Paris</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="https://pbs.twimg.com/profile_images/1685631688/AnonCircle4_400x400.png" alt="New York" width="400" height="300">
-        <p><strong>CFO</strong></p>
+        <img src="newyork.jpg" alt="New York" width="400" height="300">
+        <p><strong>New York</strong></p>
         <p>We built New York</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="https://pbs.twimg.com/profile_images/1685631688/AnonCircle4_400x400.png" alt="San Francisco" width="400" height="300">
-        <p><strong>Marketing Analysis</strong></p>
+        <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
+        <p><strong>San Francisco</strong></p>
         <p>Yes, San Fran is ours</p>
       </div>
     </div>
   </div>
 </div>		
 								</section>
-					
-<article/>
+					</article>
+
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
