--- a/team.html
+++ b/team.html
@@ -52,32 +52,30 @@
 								<section>
 									<!-- Container (Portfolio Section) -->
 <div class="container-fluid text-center bg-grey">
-  <h2>Portfolio</h2><br>
-  <h4>What we have created</h4>
   <div class="row text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="paris.jpg" alt="Paris" width="400" height="300">
-        <p><strong>Paris</strong></p>
-        <p>Yes, we built Paris</p>
+        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="Paris" height="400" width="400">
+        <p><strong>Najmi Ariffin</strong></p>
+        <p>Founder + Strategy</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="newyork.jpg" alt="New York" width="400" height="300">
-        <p><strong>New York</strong></p>
-        <p>We built New York</p>
+        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="New York" height="400" width="400">
+        <p><strong>Amir Nawi</strong></p>
+        <p>Co-Founder Officer</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-        <p><strong>San Francisco</strong></p>
-        <p>Yes, San Fran is ours</p>
+        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="San Francisco" height="400" width="400">
+        <p><strong>XXXX</strong></p>
+        <p>Marketing Analysis</p>
       </div>
     </div>
   </div>
-</div>		
+</div>
 								</section>
 					</article>
 
