--- a/team.html
+++ b/team.html
@@ -55,21 +55,21 @@
   <div class="row text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="Paris" height="400" width="400">
+        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="Founder + Strategy" height="350" width="350">
         <p><strong>Najmi Ariffin</strong></p>
         <p>Founder + Strategy</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="New York" height="400" width="400">
+        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="CFO" height="350" width="350">
         <p><strong>Amir Nawi</strong></p>
         <p>Co-Founder Officer</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="San Francisco" height="400" width="400">
+        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="MRO" height="350" width="350">
         <p><strong>XXXX</strong></p>
         <p>Marketing Analysis</p>
       </div>
