--- a/team.html
+++ b/team.html
@@ -55,23 +55,23 @@
   <div class="row text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="Founder + Strategy" height="350" width="350">
-        <p><strong>Najmi Ariffin</strong></p>
-        <p>Founder + Strategy</p>
+        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="Founder + Strategy" height="300" width="300">
+        <p style="text-align: center;"><strong>Najmi Ariffin</strong></p>
+        <p style="text-align: center;">Founder + Strategy</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="CFO" height="350" width="350">
-        <p><strong>Amir Nawi</strong></p>
-        <p>Co-Founder Officer</p>
+        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="CFO" height="300" width="300">
+        <p style="text-align: center;"><strong>Amir Nawi</strong></p>
+        <p style="text-align: center;">Co-Founder Officer</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="MRO" height="350" width="350">
-        <p><strong>XXXX</strong></p>
-        <p>Marketing Analysis</p>
+        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="MRO" height="300" width="300">
+        <p style="text-align: center;"><strong>XXXX</strong></p>
+        <p style="text-align: center;">Marketing Analysis</p>
       </div>
     </div>
   </div>
