--- a/team.html
+++ b/team.html
@@ -52,7 +52,7 @@
 								<section>
 									<!-- Container (Portfolio Section) -->
 <div class="container-fluid text-center bg-grey">
-  <div class="row text-center">
+  <div class="container text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="Founder + Strategy" height="300" width="300">
