--- a/team.html
+++ b/team.html
@@ -55,14 +55,14 @@
 <div class="container text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="Founder + Strategy" height="300" width="300">
+        <img src="Founder-najmi-01.jpg" alt="Founder + Strategy" height="300" width="300">
         <p style="text-align: center;"><strong>Najmi Ariffin</strong></p>
         <p style="text-align: center;">Founder + Strategy</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="CFO" height="300" width="300">
+        <img src="CFO-amir-01-01.jpg" alt="CFO" height="300" width="300">
         <p style="text-align: center;"><strong>Amir Nawi</strong></p>
         <p style="text-align: center;">Co-Founder Officer</p>
       </div>
