--- a/team.html
+++ b/team.html
@@ -52,7 +52,7 @@
 								<section>
 									<!-- Container (Portfolio Section) -->
 <div class="container-fluid text-center bg-grey">
-<div class="container text-center">
+<div class="row text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="Founder + Strategy" height="250" width="250">
