--- a/team.html
+++ b/team.html
@@ -54,7 +54,7 @@
 <div class="container-fluid text-center bg-grey">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="Founder + Strategy" height="250" width="250">
+        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="Founder + Strategy" height="250" width="250"style="text-align: center;">
         <p style="text-align: center;"><strong>Najmi Ariffin</strong></p>
         <p style="text-align: center;">Founder + Strategy</p>
       </div>
