--- a/team.html
+++ b/team.html
@@ -52,7 +52,7 @@
 								<section>
 									<!-- Container (Portfolio Section) -->
 <div class="container-fluid text-center bg-grey">
-<div class="row text-center">
+<div class="row container-center">
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="Founder + Strategy" height="367" width="367">
@@ -72,6 +72,13 @@
         <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/CFO-amir-01-01.jpg" alt="CFO" height="367" width="367">
         <p style="text-align: center;"><strong>Amir Nawi</strong></p>
         <p style="text-align: center;">Co-Founder Officer</p>
+	      <ul style="text-align: center;" class="icons">
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						</ul>
       </div>
     </div>
     <div class="col-sm-4">
@@ -79,6 +86,13 @@
         <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="MRO" height="367" width="367">
         <p style="text-align: center;"><strong>XXXX</strong></p>
         <p style="text-align: center;">Marketing Analysis</p>
+	      <ul style="text-align: center;" class="icons">
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						</ul>
       </div>
     </div>
   </div>
