--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 							Graphic Design Architect<br />
 							crafted by <a href="http://html5up.net">us</a>.</p>
 							<ul class="actions">
-								<li><a href="mailto:myketapang@gmail.com?subject=MyKetapang Website Enquiry" class="button special">Get in Touch</a></li>
+								<form class="form-inline">
+    <input type="email" class="form-control" size="50" placeholder="Email Address" required>
+    <button type="button" class="btn btn-danger">Subscribe</button>
+  </form>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
