--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 							crafted by <a href="http://html5up.net">us</a>.</p>
 							<ul class="actions">
 								<form class="form-inline">
-    <input type="email" class="form-control" size="50" placeholder="Email Address" required>
-    <button type="button" class="btn btn-danger">Subscribe</button>
+    <input type="email" class="form-control" size="20" placeholder="Email Address" required>
+    <button type="button" class="button special">Subscribe</button>
   </form>
 							</ul>
 						</div>
