--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 							crafted by <a href="http://html5up.net">us</a>.</p>
 							<ul class="actions">
 								<form class="form-inline">
-    <input type="email" class="form-control" size="20" placeholder="Email Address" required>
-    <button type="button" class="button special">Subscribe</button>
-  </form>
+    								<input type="email" class="form-control" size="20px" placeholder="Email Address" required>
+    								<button type="button" class="button special">Subscribe</button>
+  								</form>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
