--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ return true; }
 <input name="FromEmailAddress" type="text" maxlength="60" style="width: 340px;" />
 </td> </tr> <tr> <td align="center">
 <div style="float: right"><a href="https://www.100forms.com" id="lnk100" title="form to email">form to email</a></div>
-<script src="https://www.100forms.com/js/FORMKEY:WMLYHHM3ZJL2/SEND:my@email.com" type="text/javascript"></script>
+<script src="https://www.100forms.com/js/FORMKEY:WMLYHHM3ZJL2/SEND:myketapang@gmail.com" type="text/javascript"></script>
 <input id="skip_Submit" name="skip_Submit" type="submit" value="SUBSCRIBE" />
 </td> </tr>
 </table>
