--- a/team.html
+++ b/team.html
@@ -63,7 +63,7 @@
 <div class="row container-center">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="Founder + Strategy" height="367" width="367">
+        <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="Founder + Strategy" height="367" width="367" margin: 0 auto;>
         <p style="text-align: center;"><strong>Najmi Ariffin</strong></p>
         <p style="text-align: center;">Founder + Strategy</p>
 		      <ul style="text-align: center;" class="icons">
