--- a/team.html
+++ b/team.html
@@ -63,7 +63,7 @@
 <div class="row container-center">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <div class="4u"><span class="image fit"><img src="ihttps://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="Founder + Strategy" /></span></div>
+        <div class="4u"><span class="image fit"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="Founder + Strategy" /></span></div>
         <p style="text-align: center;"><strong>Najmi Ariffin</strong></p>
         <p style="text-align: center;">Founder + Strategy</p>
 		      <ul style="text-align: center;" class="icons">
