--- a/team.html
+++ b/team.html
@@ -64,9 +64,9 @@
     <div class="col-sm-4">
       <div class="thumbnail">
         <div class="4u"><span class="image fit"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="Founder + Strategy" /></span></div>
-        <p style="text-align: center;"><strong>Najmi Ariffin</strong></p>
-        <p style="text-align: center;">Founder + Strategy</p>
-		      <ul style="text-align: center;" class="icons">
+        <p><strong>Najmi Ariffin</strong></p>
+        <p>Founder + Strategy</p>
+		      <ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
