--- a/team.html
+++ b/team.html
@@ -54,8 +54,8 @@
 <div class="container-fluid text-center bg-grey">
 <div class="row container-center">
     <div class="col-sm-4">
-      <div class="thumbnail">
-        <div class="12u"><span class="image fit"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="Founder + Strategy" /></span></div>
+      <div class="row uniform 50%">
+        <div class="4u"><span class="image fit"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="Founder + Strategy" /></span></div>
         <p><strong>Najmi Ariffin</strong></p>
         <p>Founder + Strategy</p>
 		      <ul class="icons">
