--- a/team.html
+++ b/team.html
@@ -54,9 +54,9 @@
 <div class="container-fluid text-center bg-grey">
 <div class="row container-center">
     <div class="col-sm-4">
-      <div class="row uniform 50%">
-        <div class="4u"><span class="image fit"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="Founder + Strategy" /></span></div>
-        <p><strong>Najmi Ariffin</strong></p>
+      <div class="thumbnail">
+         <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="CFO" height="300" width="300">
+	      <p><strong>Najmi Ariffin</strong></p>
         <p>Founder + Strategy</p>
 		      <ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -69,7 +69,7 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/CFO-amir-01-01.jpg" alt="CFO" height="367" width="367">
+        <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/CFO-amir-01-01.jpg" alt="CFO" height="300" width="300">
         <p style="text-align: center;"><strong>Amir Nawi</strong></p>
         <p style="text-align: center;">Co-Founder Officer</p>
 	      <ul style="text-align: center;" class="icons">
@@ -83,7 +83,7 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="MRO" height="367" width="367">
+        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="MRO" height="300" width="300">
         <p style="text-align: center;"><strong>XXXX</strong></p>
         <p style="text-align: center;">Marketing Analysis</p>
 	      <ul style="text-align: center;" class="icons">
