--- a/team.html
+++ b/team.html
@@ -54,10 +54,12 @@
 <div class="container-fluid text-center bg-grey">
 <div class="row container-center">
     <div class="col-sm-4">
-      <div class="thumbnail">
+      <div class="box alt">
+	<div class="row uniform 50%">
+		<div class="thumbnail">
          <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="CFO" height="300" width="300">
-	      <p><strong>Najmi Ariffin</strong></p>
-        <p>Founder + Strategy</p>
+	      	<p style="text-align: center;"><strong>Najmi Ariffin</strong></p>
+		<p style="text-align: center;"><p>Founder + Strategy</p>
 		      <ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -96,6 +98,8 @@
       </div>
     </div>
   </div>
+</div>
+	 </div>
 </div>
 								</section>
 					</article>
