--- a/team.html
+++ b/team.html
@@ -57,7 +57,7 @@
       <div class="thumbnail">
          <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="CFO" height="300" width="300">
 	      	<p style="text-align: center;"><strong>Najmi Ariffin</strong></p>
-		<p style="text-align: center;"><p>Founder + Strategy</p>
+		<p style="text-align: center;">Founder + Strategy</p>
 		      <ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
