--- a/team.html
+++ b/team.html
@@ -58,7 +58,7 @@
          <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Founder-najmi-01.jpg" alt="CFO" height="300" width="300">
 	      	<p style="text-align: center;"><strong>Najmi Ariffin</strong></p>
 		<p style="text-align: center;">Founder + Strategy</p>
-		      <ul class="icons">
+		      <ul style="text-align: center;" class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
