--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="services.html">Services</a></li>
 											<li><a href="team.html">Team</a></li>
-											<li><a href="example.html">Examples</a></li>
+											<li><a href="pricing.html">Pricing</a></li>
 											<li><a href="contact-us.html">Contact us</a></li>
 										</ul>
 									</div>
