--- a/pricing.html
+++ b/pricing.html
@@ -104,15 +104,13 @@
 					<article id="main">
 						<header>
 							<h2>Pricing</h2>
-							<p>Determining website cost can be tricky for business owners, so we put together our Estimation on how much a website really costs in 2016</p>
+							<p>Choose a payment plan that works for you</p>
 						</header>
 						<section class="wrapper style5">
 							<body>
 <!-- Container (Pricing Section) -->
 <div class="container-fluid">
   <div class="text-center">
-    <h2>Pricing</h2>
-    <h4>Choose a payment plan that works for you</h4>
   </div>
   <div class="row">
     <div class="col-sm-4 col-xs-12">
