--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@ return true; }
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Pricing</h2>
+								<p>Determining website cost can be tricky for business owners, so we put together our estimation on
+								how much a website really costs in 2016.</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="#" class="button fit special">Activate</a></li>
