--- a/pricing.html
+++ b/pricing.html
@@ -116,7 +116,7 @@
     <div class="col-sm-4 col-xs-12">
       <div class="panel panel-default text-center">
         <div class="panel-heading">
-          <h1>Basic</h1>
+          <h1><p><span style="color:#000000;">Basic</span></p></h1>
         </div>
         <div class="panel-body">
           <p><strong>20</strong> Lorem</p>
@@ -135,7 +135,7 @@
     <div class="col-sm-4 col-xs-12">
       <div class="panel panel-default text-center">
         <div class="panel-heading">
-          <h1>Pro</h1>
+          <h1><p><span style="color:#000000;">Pro</span></p></h1>
         </div>
         <div class="panel-body">
           <p><strong>50</strong> Lorem</p>
@@ -154,7 +154,7 @@
     <div class="col-sm-4 col-xs-12">
       <div class="panel panel-default text-center">
         <div class="panel-heading">
-          <h1>Premium</h1>
+          <h1><p><span style="color:#000000;">Premium</span></p></h1>
         </div>
         <div class="panel-body">
           <p><strong>100</strong> Lorem</p>
