--- a/pricing.html
+++ b/pricing.html
@@ -106,7 +106,8 @@
 							<h2>Pricing</h2>
 							<p>Choose a payment plan that works for you</p>
 						</header>
-						
+						<section class="wrapper style5">
+							<div class="inner">
 <!-- Container (Pricing Section) -->
 <div class="container-fluid">
   <div class="text-center">
@@ -174,7 +175,8 @@
     </div>
   </div>
 </div>
-
+</div>
+						</section>
 
 					</article>
 
