--- a/pricing.html
+++ b/pricing.html
@@ -104,10 +104,11 @@
 					<article id="main">
 						<header>
 							<h2>Pricing</h2>
-							<p>Choose a payment plan that works for you</p>
+							<p> </p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
+								<p>Choose a payment plan that works for you.</p>
 <!-- Container (Pricing Section) -->
 <div class="container-fluid">
   <div class="text-center">
