--- a/pricing.html
+++ b/pricing.html
@@ -108,7 +108,9 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-								<p>Choose a payment plan that works for you.</p>
+								<p style="text-align: center;">Choose a payment plan that works for you.
+								</p>
+								
 <!-- Container (Pricing Section) -->
 <div class="container-fluid">
   <div class="text-center">
