--- a/services.html
+++ b/services.html
@@ -48,7 +48,9 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-								<div class="container">
+<body>
+
+<div class="container">
   <h2>Dynamic Pills</h2>
   <ul class="nav nav-pills">
     <li class="active"><a data-toggle="pill" href="#home">Home</a></li>
@@ -77,6 +79,7 @@
   </div>
 </div>
 
+</body>
 								
 							</div>
 						</section>
