--- a/pricing.html
+++ b/pricing.html
@@ -102,13 +102,11 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Pricing</h2>
+							<h2><span style="color:#FFFFFF;">Pricing</span></h2>
 							<p> </p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-								<p style="text-align: center;">Choose a payment plan that works for you.
-								</p>
 
 <!-- Container (Pricing Section) -->
 <div class="container-fluid">
