--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Services/Projects</h2>
+							<h2><span style="color:#FFFFFF;">Services</span></h2>
 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 						</header>
 						<section class="wrapper style5">
