--- a/services.html
+++ b/services.html
@@ -31,8 +31,8 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="services.html">Services</a></li>
 											<li><a href="team.html">Team</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="pricing.html">Pricing</a></li>
+											<li><a href="contact-us.html">Contact us</a></li>
 										</ul>
 									</div>
 								</li>
@@ -95,7 +95,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>COPYRIGHT</li><li>Design: <a href="http://html5up.net">MYKETAPANG GROUP 2016</a></li>
 						</ul>
 					</footer>
 
