--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ return true; }
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>COPYRIGHT</li><li>Design: <a href="http://html5up.net">MYKETAPANG GROUP 2016</a></li>
 						</ul>
 					</footer>
 
