--- a/contact-us.html
+++ b/contact-us.html
@@ -43,7 +43,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Elements</h2>
+							<h2>Get in Touch</h2>
 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 						</header>
 						<section class="wrapper style5">
@@ -51,7 +51,7 @@
 
 								<section>
 									<h4>Form</h4>
-									<form method="post" action="#">
+									<form method="post" action="example.html">
 										<div class="row uniform">
 											<div class="6u 12u$(xsmall)">
 												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
