--- a/contact-us.html
+++ b/contact-us.html
@@ -51,7 +51,7 @@
 
 								<section>
 									<h4>Form</h4>
-									<form method="post" action="example.html">
+									<form method="get" action="example.html">
 										<div class="row uniform">
 											<div class="6u 12u$(xsmall)">
 												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
