--- a/contact-us.html
+++ b/contact-us.html
@@ -44,15 +44,15 @@
 					<article id="main">
 						<header>
 							<h2>Get in Touch</h2>
-							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
+							<p>Write to us ... there's nothing better than a message.</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
 								<section>
-									<h4>Form</h4>
+	
 <!-- Change the width and height values to suit you best -->
-<div class="typeform-widget" data-url="https://myketapang.typeform.com/to/D5i9VD" data-text="Contact Form" style="width:100%; height:100%;"></div>
+<div class="typeform-widget" data-url="https://myketapang.typeform.com/to/D5i9VD" data-text="Contact Form" style="width:100%; height:1000px;"></div>
 <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"><a href="https://www.typeform.com/examples/forms/contact-form-template/?utm_campaign=D5i9VD&amp;utm_source=typeform.com-5435167-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-contactform&amp;utm_term=EN" style="color: #999" target="_blank">Contact form</a>powered by Typeform</div>
 								</section>
